<resources>
    <string name="app_name">Screen\nRuler</string>
    <string name="app_name_pro">Screen Ruler Pro</string>
    <string name="copyright" translatable="false">&#169; 2022 Data Visions</string>
    <string name="pro_package" translatable="false">de.datavisions.screenruler.pro</string>
    <string name="pro_badge" translatable="false">PRO</string>
    <string name="cm" translatable="false">%d cm</string>
    <string name="inch" translatable="false">%d in</string>
    <string name="factor">Factor\n%.2f</string>
    <string name="calibrate">Calibrate</string>
    <string name="impressum">App Info</string>
    <string name="info" translatable="false">App Version: %s</string>
    <string name="creator">by Dr. Rudolf Jagdhuber</string>
    <string name="pro">Remove Ads</string>
    <string name="pro_desc">You can upgrade to the pro version to remove all ads and support me as a programmer.</string>
    <string name="pro_btn">Get the Pro Version</string>
    <string name="thanks">Thank You! :-)</string>
    <string name="thanks_desc">You are currently using the Pro Version of this App. Thank you very much for your support!</string>
</resources>