<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:liftOnScroll="true"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" >


            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:layout_marginStart="8dp"
                app:icon="@drawable/ic_back"
                app:iconGravity="textStart"
                app:iconSize="32dp"
                app:iconTint="@color/black"/>


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.05"
                android:text="@string/impressum"
                android:layout_marginStart="20dp"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="HardcodedText">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:src="@drawable/ic_applogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/fgBlue"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/app_name"
                android:textColor="@color/fgBlue"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@id/copyright"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="@+id/logo"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="24dp"
                android:text="@string/copyright"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/appname"
                app:layout_constraintTop_toBottomOf="@id/appname" />


            <TextView
                android:id="@+id/pro_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="-10"
                android:text="@string/pro_badge"
                android:textColor="@color/fgRed"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/copyright"
                app:layout_constraintEnd_toEndOf="@+id/appname"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/copyright"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1" />


            <TextView
                android:id="@+id/app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/fgGray1"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="0.4" />


            <TextView
                android:id="@+id/creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/creator"
                android:textColor="@color/fgGray1"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_info" />

            <TextView
                android:id="@+id/web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="4dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="https://www.data-visions.de"
                android:textColor="@color/fgGray1"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creator" />


            <TextView
                android:id="@+id/title_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:text="@string/pro"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/web"
                app:layout_constraintBottom_toTopOf="@id/desc_pro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0"
                />


            <TextView
                android:id="@+id/desc_pro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:text="@string/pro_desc"
                android:textColor="@color/fgGray1"
                android:textSize="15sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_pro" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pro"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="24dp"
                android:backgroundTint="@color/fgBlue"
                android:text="@string/pro_btn"
                app:icon="@drawable/ic_applogo"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_pro"
                app:layout_constraintVertical_bias="0" />

            <View
                android:id="@+id/thanks"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginVertical="80dp"
                android:background="@drawable/ic_thanks"
                android:backgroundTint="@color/fgBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_pro"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
